# spandrel-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml
docs/: README.md
src/spandrel_core/: __init__.py  constants.py  cosmology.py  data.py  likelihood.py  pantheon.py
tests/: __init__.py  test_core.py
