[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spandrel-core"
version = "0.1.0"
description = "Core utilities for Type Ia supernova cosmology and Spandrel hypothesis testing"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Deirikr Jaiusadastra Afrauthihinngreygaard" }
]
keywords = [
    "cosmology",
    "supernova",
    "type-ia",
    "dark-energy",
    "bayesian",
    "mcmc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
fits = ["astropy>=5.0"]
sampling = ["emcee>=3.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/Oichkatzelesfrettschen/spandrel-core"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spandrel_core"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["UP045"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
